# ChangeLog for x11-wm/pekwm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/pekwm/ChangeLog,v 1.47 2009/07/11 11:39:44 omp Exp $

  11 Jul 2009; <omp@gentoo.org> -pekwm-0.1.5.ebuild, -pekwm-0.1.6.ebuild,
  -files/pekwm-0.1.6-gcc-4.3.patch, -pekwm-0.1.8.ebuild,
  -files/pekwm-0.1.8-mplayer.patch:
  Remove older versions.

*pekwm-0.1.10 (17 Feb 2009)

  17 Feb 2009; Jim Ramsay <lack@gentoo.org> +pekwm-0.1.10.ebuild:
  Version bump - 0.1.10 is released

  09 Jan 2009; Rémi Cardona <remi@gentoo.org> pekwm-0.1.5.ebuild,
  pekwm-0.1.6.ebuild, pekwm-0.1.7.ebuild, pekwm-0.1.8.ebuild:
  Change virtual/xft dependency to x11-libs/libXft, bug 253771.

*pekwm-0.1.8 (10 Dec 2008)

  10 Dec 2008; Ben de Groot <yngwin@gentoo.org>
  +files/pekwm-0.1.8-mplayer.patch, +pekwm-0.1.8.ebuild:
  Version bump, with added upstream patch for mplayer fullscreen, see bug 246356

  30 Nov 2008; Raúl Porcel <armin76@gentoo.org> pekwm-0.1.7.ebuild:
  sparc stable wrt #245246

  20 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org> pekwm-0.1.7.ebuild:
  ppc stable, bug #245246

  19 Nov 2008; Markus Meier <maekke@gentoo.org> pekwm-0.1.7.ebuild:
  amd64/x86 stable, bug #245246

*pekwm-0.1.7 (20 Sep 2008)

  20 Sep 2008; Ben de Groot <yngwin@gentoo.org> +pekwm-0.1.7.ebuild:
  Version bump. Drop no longer needed gcc-4.3 patch. Update SRC_URI.

  24 Apr 2008; David Shakaryan <omp@gentoo.org>
  +files/pekwm-0.1.6-gcc-4.3.patch, pekwm-0.1.6.ebuild:
  Compile with GCC 4.3; patch from Debian modified by Peter Alfredsen. (bug
  #218956)

  09 Sep 2007; Santiago M. Mola <coldwind@gentoo.org> pekwm-0.1.5.ebuild,
  pekwm-0.1.6.ebuild:
  Remove vim swap file which got into themes tarball. Bug #190264

  20 Aug 2007; Stuart Longland <redhatter@gentoo.org> pekwm-0.1.6.ebuild:
  Tested and working on MIPS.  Keyworded ~mips as per bug #114498.

*pekwm-0.1.6 (03 Jun 2007)

  03 Jun 2007; David Shakaryan <omp@gentoo.org> +pekwm-0.1.6.ebuild: