@@ -1,6 +1,11 @@
 # ChangeLog for x11-wm/pekwm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/pekwm/ChangeLog,v 1.47 2009/07/11 11:39:44 omp Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/pekwm/ChangeLog,v 1.48 2009/07/11 11:57:05 omp Exp $
+
+*pekwm-0.1.11 (11 Jul 2009)
+
+  11 Jul 2009; <omp@gentoo.org> +pekwm-0.1.11.ebuild:
+  Version bump. (bug #272127)
 
   11 Jul 2009; <omp@gentoo.org> -pekwm-0.1.5.ebuild, -pekwm-0.1.6.ebuild,
   -files/pekwm-0.1.6-gcc-4.3.patch, -pekwm-0.1.8.ebuild,
